--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>About | Akia Canada</title>
-   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
@@ -28,6 +28,8 @@
 
   <div id="main-container" class="container">
     <section class="main-section">
+     <div class="row">
+      <div class="col-sm-4">
       <h1>About Me</h1>
 
       <img src="https://raw.githubusercontent.com/akiacanada/basicPortfolio/master/assets/images/AAEAAQAAAAAAAAVDAAAAJDk2MjM3YjA3LTM3ZTktNDE3NS04MGFlLTVkNmRlMTQwYTU4Mg.jpg" class="auth-image" alt="Your Name">
@@ -45,6 +47,9 @@
 
       <!-- end slipsum code -->
     </p>
+    
+      </div>
+      </div>
 
     </section>
 
@@ -61,7 +66,11 @@
 
   <footer>
     <div class="container">
+      <div class="row">
+        <div class="col-sm-12">
       Copyright &copy; 2017 Akia C.D. Canada
+         </div>
+      </div>
     </div>
   </footer>
 </body>
